# mslam

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  readme.md  scan_1709116129179.pbscan  todo  todo.md
.agents/skills/regression/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/agents/: slam-expert.agent.md  viewer-expert.agent.md
.github/instructions/: expert.instructions.md  guideline.instructions.md
client/: README.md  colormap.py  geometry.py  points.py  pyproject.toml  slam_client.py  viewer.py
client/proto_gen/: lidar_pb2.py  lidar_pb2.pyi  lidar_pb2_grpc.py  slam_pb2.py  slam_pb2.pyi  slam_pb2_grpc.py
cmake/: code_format.cmake  findGRPC.cmake  format.cmake
config/: mslam.json
docker/: Dockerfile  DockerfileViewer  docker-compose.yml
docs/: model.gaphor
grpc/: CMakeLists.txt  Conversions.cc  Conversions.hh  RemoteMap.cc  RemoteMap.hh  RemoteScan.cc  RemoteScan.hh  slam.proto
grpc/proto/: points.proto
include/: FileScan.hh  IMapPublisher.hh  IScan.hh  Points.hh  Registration.hh  Transform.hh
include/common/: IMU.hh  Points.hh  Pose.hh  State.hh
include/config/: IConfig.hh  JsonConfig.hh  Validation.hh
include/map/: IMap.hh  IMap2D.hh  KDTreeMap.hh  KDtree2DMap.hh  OctreeMap.hh  Simple2DMap.hh  Voxel.hh  VoxelHashMap.hh  imap.hh
include/slam/: CorrespondenceFinder.hh  ICorrespondenceFinder.hh  ISlam.hh  ImuPreintegration.hh  NormalEstimator.hh  PointCloudExporter.hh  Preprocessor.hh  RecordingSensorPlayer.hh  Registration.hh  Registration2D.hh  Slam.hh  SlamPlayer.hh  SlamServer.hh  Transform.hh
include/slam/registration/: IRegistration.hh  ImuPreintegrationFactor.hh  ImuRegistration.hh  PointToPlaneRegistration.hh  PointToPointRegistration.hh
src/: FileScan.cc  Registration.cc  Registration2D.cc  Transform.cc  app.cc  main.cc  mslam.cc  register_scans.cc  register_scans2d.cc
src/config/: CMakeLists.txt  JsonConfig.cc  Validation.cc
src/map/: CMakeLists.txt  KDTree2DMap.cc  KDTreeMap.cc  OctreeMap.cc  Simple2DMap.cc  Voxel.cc  VoxelHashMap.cc
src/maps/: CMakeLists.txt  KDTreeMap.cc  OctreeMap.cc  VoxelHashMap.cc
src/slam/: CMakeLists.txt  Conversion.cc  Conversion.hh  CorrespondenceFinder.cc  ImuPreintegration.cc  NormalEstimator.cc  PointCloudExporter.cc  PointDistance.hh  PointToPlaneRegistration.cc  PointToPointRegistration.cc  Preprocessor.cc  RecordingSensorPlayer.cc  Registration.cc  Registration2D.cc  Slam.cc  SlamPlayer.cc  SlamServer.cc  Transform.cc  conversion.cc
src/slam/registration/: ImuRegistration.cc  PointToPlaneRegistration.cc  PointToPointRegistration.cc
test/: CMakeLists.txt  draft.cc  test_point_metrics.cc  test_preprocessor.cc  test_slam.cc
test/data/: scan1.ply  scan2.ply  scan3.ply  scan4.ply  scan5.ply  src.ply  tgt.ply  tgt2.ply  tgt2_rot.ply
test/map/: CMakeLists.txt  test_map_neighbors.cc  test_voxel_hash.cc
test/player/: scan_1728590830278095.pbscan
viewer/: README.md  index.html  package-lock.json  package.json
viewer/src/: CloudManager.ts  EdlPass.ts  RulerTool.ts  edlShader.ts  layout.ts  main.ts  styles.css
